<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IT Collection</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_kr36">Kr36Activity</string>
    <string name="baidu_various_text">百家</string>
    <string name="baidu_various">百家百家</string>
    <string name="lei_phone">雷锋网</string>
    <string name="title_news_category_sport">雷锋</string>
    <string name="title_news_category_play">36氪</string>
    <string name="title_news_category_huxiu">虎嗅</string>
    <string name="huxiu">虎嗅网</string>
    <string name="guokr">果壳网</string>
    <string name="title_news_category_guokr">果壳</string>
    <string name="title_news_category_animetaster">艾尼莫</string>
    <string name="title_news_category_setting">设置</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="wallstreete_news">华尔街新闻直播</string>
    <string name="load_err_test">加载失败，请检查网络是否正常，请稍后再试</string>
    <string name="load_again">重试</string>
    <string name="new_tx">new</string>

    <!-- 下拉刷新 end -->
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_default_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">无更多信息</string>
    <string name="is_err_network">数据加载失败</string>

    <!-- animetaste item -->
    <string name="story_mode">剧情</string>
    <string name="mv_mode">MV</string>
    <string name="advert_mode">广告/宣传</string>
    <string name="cg_mode">游戏CG</string>
    <string name="notice_mode">预告/花絮</string>
    <string name="record_mode">纪录片</string>
    <string name="theater_mode">剧场版</string>

    <!-- setting -->
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="fb_tx">意见反馈</string>
    <string name="share_tx">软件分享</string>
    <string name="personal_customization">个人订阅</string>
    <string name="fb_welcome">亲！你好</string>
    <!-- share -->
    <string name="share_sina">新浪微博</string>
    <string name="share_weixin">微信</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_weixin_circle">朋友圈</string>
    <string name="share_qq_zone">QQ空间</string>
    <string name="share_text">如果您觉得我们对您有用，</string>
    <string name="share_text2">就赶紧分享给你的小伙伴吧!</string>
    <string name="share_to_test">分享到</string>
    <string name="sina_test">新浪微博</string>
    <string name="wechat_circle_test">朋友圈</string>
    <string name="wechat_test">微信好友</string>
    <string name="QQ_test">QQ</string>
    <string name="qzone_test">QQ空间</string>
    <string name="share_content">IT Collection是一个关注互联网发展,分享互联网精彩资讯,体会互联网成功感悟,记录互联网创新成长，让我们的生活更方便　！！</string>
    <string name="share_title">IT Collection</string>
    <string name="fengchi_search">全面&#160;&#160;及时&#160;&#160;优质</string>
    <string name="fengchi_network">石头工作室</string>
    <string name="about_sky_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;今日头条是一款基于数据挖掘的推荐引擎产品，它为用户推荐有价值的、个性化的互联网信息，提供连接人与信息的新型服务，是首家国内移动互联网领域信息产品服务。\n
     &#160;&#160;&#160;&#160;&#160;&#160;主营业务：向客户提供多家互联网新闻，用户可根据自己的兴趣灵活订阅。\n&#160;&#160;&#160;&#160;&#160;&#160;服务客户：面向全部爱好、关注互联网的用户和企业\n
&#160;&#160;&#160;&#160;&#160;&#160;个人愿景：致力于打造极致用户体验的服务平台。</string>
    <string name="update_final">当前已是最新版本</string>
    <string name="update_nowifi">没有wifi连接， 只在wifi下更新</string>
    <string name="str_timeout">超时</string>
    <string name="error_connet_s">世界上最痛苦的是有手机没网络。检查设置</string>
    <string name="error_connet">网络异常</string>
    <string name="connect_networth">关注互联网&#160;&#160; 链接你我</string>
    

</resources>