<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="5dp"
    android:layout_toRightOf="@id/share_to_tx"
    android:background="@color/transparent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/sina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/umeng_socialize_sina" />

        <TextView
            android:id="@+id/sina_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sina_test"
            android:textColor="@color/light_black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wechat_circle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/umeng_socialize_wxcircle_bg" />

        <TextView
            android:id="@+id/wechat_circle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/wechat_circle_test"
            android:textColor="@color/light_black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wechat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/umeng_socialize_wechat_bg" />

        <TextView
            android:id="@+id/wechat_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/wechat_test"
            android:textColor="@color/light_black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/umeng_socialize_qq" />

        <TextView
            android:id="@+id/qq_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/QQ_test"
            android:textColor="@color/light_black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qzone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/umeng_socialize_qzone" />

        <TextView
            android:id="@+id/qzone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/qzone_test"
            android:textColor="@color/light_black"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>